# UNIVERSE-legacy

./: README.md
Doc/: UML - Class - Procedural Engine.dia  UML - Flux - Procedural Engine - Planet.dia  UML - Procedural Engine.dia
PoC/: README.md
PoC/VoronoiNoise/: Makefile  README.md  dsgl.cpp  dsgl.hpp  dsglMeshes.cpp  dsglMeshes.hpp  fragment.shader  main.cpp  vertex.shader
PoC/cubeMapping/: Makefile  common.cpp  common.hpp  heightMap  main.cpp  main.cpp.megamoth  main.higherLayers.cpp  png.cpp  png.hpp  realm.cpp  realm.hpp  realmMinusezed.cpp  realmMinusezed.hpp  realmMinusigrec.cpp  realmMinusigrec.hpp  realmMinusix.cpp  realmMinusix.hpp  realmPlusezed.cpp  realmPlusezed.hpp  realmPlusigrec.cpp  realmPlusigrec.hpp  realmPlusix.cpp  realmPlusix.hpp  stampCollector.cpp  stampCollector.hpp
PoC/fastProceduralPlanet/: Makefile  fragment.shader  main.cpp  main.hpp  planet.cpp  planet.hpp  universe
PoC/fastProceduralSphere/: planet.cpp  vertex.shader
PoC/fault/: planet.cpp
PoC/heightMap/: Makefile  heightMap  main.cpp  png.cpp
PoC/improvedPerlinNoise/: Makefile  README  README.md  main.c  png.c  png.h
PoC/proceduralPlanet/: Makefile  fragment.shader  main.cpp  (+7 more)
crap/: README
doc/: .~lock.Document de référence.odt#  Document de référence.odt  UNIVERSE - Livre Blanc.odt
labo/: demo0x01.cpp  demo0x02.cpp  demo0x03.cpp  demo0x06.cpp
src/: CMakeLists.txt  main.cpp
src/ProceduralEngine/: CMakeLists.txt  HeightmapBrushes.cpp  HeightmapBrushes.hpp  Planet.hpp  ProceduralEngine.hpp  brushBell.cs  dataTypes.hpp
src/unit-tests/: CMakeLists.txt  main.cpp
(+94 files in other folders)
